# Moodle_C-

./: .gitmodules  CMakeLists.txt  README.md  testing.sh
docs/: datasets.txt  preg1.txt  preg2.txt
include/: CMakeLists.txt  dataset.h  exam.h  input.h  menu.h  parser.h  pregunta_calculada.h  pregunta_estructura.h  pregunta_multiple.h  pregunta_simple.h  question.h
src/: dataset.cpp  exam.cpp  input.cpp  main.cpp  menu.cpp  parser.cpp  pregunta_calculada.cpp  pregunta_multiple.cpp  pregunta_simple.cpp  question.cpp
